kubernetes/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app
  namespace: default
  labels:
    app: todo-app
    tier: frontend
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30080
      protocol: TCP
      name: http
  selector:
    app: todo-app
